tests/Acceptance/_data/InvalidProject/src/Pyz/Zed/DeadClass/Model/DeadClassPlugin.php
<?php

namespace SprykerSdkTest\InvalidProject\Pyz\Zed\DeadClass\Model;

use Spryker\Zed\DeadClass as SprykerDeadClass;

class DeadClassPlugin extends SprykerDeadClass
{

}
